# tiny-linux-chat-app

./: .gitignore  README.md
client/: meson.build
client/data/: org.tlca.client.gresource.xml
client/data/ui/: main-window.ui  setup-window.ui
client/src/: main.c  tlca-application.c  tlca-application.h  tlca-mainwindow.c  tlca-mainwindow.h  tlca-setupwindow.c  tlca-setupwindow.h
client/src/utility/: gsockio.c  gsockio.h
server/: meson.build
server/src/: cli.c  cli.h  errordefs.c  errordefs.h  main.c  server.c  server.h
server/src/utility/: intlist.c  intlist.h  sockio.c  sockio.h
